--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_activity_settings">Settings</string>
 
     <string name="event_name">Event Name</string>
-    <string name="countdown_example">02 Months 24 Days</string>
+    <string name="countdown_example">XX Months XX Days</string>
     <string name="frenchDateFormat">dd/MM/yyyy</string>
 
     <string name="key_shared_prefs">fr.sldeveloperand.countdown.sharedprefs</string>
@@ -18,6 +18,9 @@
     <string name="event_name_summary">Event Name</string>
     <string name="month">month</string>
     <string name="day">day</string>
+    <string name="appwidget_text">Example</string>
+    <string name="shortMonth">M</string>
+    <string name="shortDay">D</string>
 
 
 </resources>
