refactor(date): refactor DateHelper and fix display bug

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -20,5 +20,7 @@
     <string name="shortMonth">M</string>
     <string name="shortDay">J</string>
     <string name="calendar">calendar</string>
+    <string name="appwidget_text">Exemple</string>
+    <string name="widgetTitle">titre</string>
 
 </resources>
